fix: footer on mobile

--- a/_includes/critical.css
+++ b/_includes/critical.css
@@ -65,20 +65,6 @@ p {
   margin: 0;
 }
 
-@media screen and (min-width: 1000px) {
-  article,
-  section > * {
-    max-width: 1048px;
-  }
-}
-
-@media screen and (max-width: 999px) {
-  article,
-  section > * {
-    max-width: 80vw;
-  }
-}
-
 article,
 section > * {
   margin: 0 auto;
